# Setback

./: .gitignore  README.md  docker-compose.yaml  requirements.txt
application/: CustomTypes.py  Game.py  GameView.py  Hand.py  User.py  config.py  forms.py  newgame.json  newhand.json  newuser.json  views.py
application/static/: dashboard.js  gameboard.css  login.css  setback.js  views.js
application/templates/: dashboard.html  gameboard.html  login.html  template.html
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/setback/: apps.py  models.py  views.py
backend/setback/migrations/: 0001_initial.py  0002_auto_20200502_2105.py
frontend/: Dockerfile  fetcher.ts  package.json  styles.scss
frontend/pages/: _app.tsx  index.tsx
frontend/setback_ui/: types.ts
frontend/setback_ui/components/: Card.module.scss  Card.tsx  Game.module.scss  Game.tsx  Hand.module.scss  Hand.tsx
nginx/: nginx.conf
