[tool.poetry]
name = "Setback"
version = "0.1.0"
description = ""
authors = ["Michael T. Mordowanec <michael.mordowanec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
mysqlclient = "^1.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
